# cscl-tblt

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_PRD.md  config.example.json  config.json  package.json  prompt_config.default.json
.github/workflows/: agent-tests.yml  cd.yml  ci.yml  client-build-and-test.yaml  deploy-production.yml  pre-commit.yml
agent/: egress_recorder.py  logger.py  main.py  prompt.py  prompt_evaluation.py  prompt_pipeline.py  prompt_realtime.py  pyproject.toml
agent/tests/: test_conversation.py  test_egress_recorder.py  test_logger.py  test_prompt_evaluation.py  test_prompt_realtime.py  test_realtime_metadata.py  test_realtime_prompt_source.py
client/: app-config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
client/app/: layout.tsx
client/hooks/: useAgentErrors.tsx
client/lib/: agent-character.ts  agent-mode.ts  agent-role.ts  agent-stance.ts  conversation-dashboard.ts  conversation-log-store.ts  evaluation-prompt-source.ts  prompt-version-db-store.ts  prompt-version-display.ts  prompt-version-store.ts  session-activity.ts  (+7 more)
docs/: README.md  infra.md  privacy-checklist-cscl-tblt.md  production-start-stop.md  production-supabase-runbook.md  realtime-deployment-strategy.md
memory/: MEMORY.md  project_structure.md
scripts/: check_realtime_prompts.py  delete_s3_recordings.sh  deploy-production.sh  dev.sh  download_s3_recordings.sh  import_prompt_versions_to_supabase.mjs  prod-health-check.sh  prod-pre-stop-check.sh
server/: main.py  pyproject.toml
supabase/: README.md  config.toml
(+116 files in other folders)
